<?xml version="1.0" encoding="utf-8"?>
<!--
  strings.xml
  Infobip RTC UI

  Copyright (c) 2016-2025 Infobip Limited
  Licensed under the Apache License, Version 2.0
-->
<resources>
    <string name="mm_audio_permission_required">Audio permission is required to handle calls.</string>
    <string name="mm_bt_connect_permission_required">Bluetooth connect permission is required to use your Bluetooth connected device for calls.</string>
    <string name="mm_read_phone_state_permission_required">Phone state permission is required to avoid parallel WebRTC and cellular calls.</string>
    <string name="mm_call_finished">Call finished</string>
    <string name="mm_call_weak_internet_connection">Your network is causing poor call quality</string>
    <string name="mm_calls_notification_channel">Calls</string>
    <string name="mm_cancel">Cancel</string>
    <string name="mm_flip_camera">Flip camera</string>
    <string name="mm_hangup">Hangup</string>
    <string name="mm_in_call">In a call</string>
    <string name="mm_in_call_notification_channel">In call</string>
    <string name="mm_incoming_call">Incoming call</string>
    <string name="mm_microphone">Microphone</string>
    <string name="mm_microphone_muted">Muted</string>
    <string name="mm_mute">Mute</string>
    <string name="mm_notification_permission_required_declining_call">Missing notification permission. Declining incoming call.</string>
    <string name="mm_read_phone_state_permission_required_declining_call">Missing phone state permission. Declining incoming call.</string>
    <string name="mm_ongoing_cellular_call_declining_call">There is ongoing cellular call. Declining incoming call.</string>
    <string name="mm_ongoing_cellular_call_call_finished">There is ongoing cellular call. Call finished.</string>
    <string name="mm_ok">Ok</string>
    <string name="mm_call_registration_notification_channel">Call registration</string>
    <string name="mm_call_registration_notification_description">Call registration is in progress</string>
    <string name="mm_screen_share">Screen share</string>
    <string name="mm_screen_sharing">Screen sharing</string>
    <string name="mm_screen_sharing_description">Your screen is shared</string>
    <string name="mm_speaker">Speaker</string>
    <string name="mm_unknown">Unknown</string>
    <string name="mm_unknown_error">Unknown error</string>
    <string name="mm_unmute">Unmute</string>
    <string name="mm_video">Video</string>
    <string name="mm_video_call">Video call</string>
    <string name="mm_video_permission_required">Camera permission is required for video calls.</string>
    <string name="mm_your_microphone_is_muted">Your microphone is muted</string>
    <string name="mm_you_are_sharing_a_screen">You are sharing a screen.</string>
    <string name="mm_stop_sharing_screen"><u>Stop sharing screen</u></string>
    <string name="mm_connection_problems">Call was disconnected. Trying to reconnect…</string>
</resources>
